# adlib

./: Cargo.toml  LICENSE  README.md
documents/: .~lock.State Machine for Transport Streamer.odg#  State Machine for Transport Streamer.odg
examples/: read_source.rs
src/: decode.rs  lib.rs  pipe.rs  plug.rs  sink.rs  source.rs  stream.rs
src/decode/: flac.rs  mod.rs
