[package]
authors = ['Geoff Clements <ro2kz0@gmail.com>']
description = "Rust library for playing music asynchronously"
# documentation = ""
edition = '2018'
# homepage = ""
license = "MIT"
name = 'adlib'
readme = "README.md"
repository = "https://github.com/GeoffClements/adlib"
version = '0.1.1'

[dependencies]
async-stream = "0.3"
bytes = "1.0"
futures-core = "0.3"
