[package]
authors = ['Geoff Clements <ro2kz0@gmail.com>']
description = "Rust library for playing music asynchronously"
# documentation = ""
edition = '2018'
# homepage = ""
license = "MIT"
name = 'adlib'
readme = "README.md"
repository = "https://github.com/GeoffClements/adlib"
version = '0.1.1'

[dependencies]
bytes = "1.0"
futures-core = "0.3"
futures-util = "0.3"
tokio = {version = "1.5", features = ["fs"]}
tokio-util = {version = "0.6", features = ["io"]}
url = "2.2"

[dev-dependencies]
adlib = {path = ".", version = "*"}
tokio = {version = "1.5", features = ["macros", "rt"]}
url = "2.2"

[[example]]
name = "read_source"
path = "examples/read_source.rs"
