[package]
authors = ['Geoff Clements <ro2kz0@gmail.com>']
description = "Rust library for playing music asynchronously"
# documentation = ""
edition = '2018'
# homepage = ""
license = "MIT"
name = 'adlib'
readme = "README.md"
repository = "https://github.com/GeoffClements/adlib"
version = '0.1.1'

[dependencies]
bytes = "1.0"
claxon = "0.4"
cpal = "0.13"
futures-core = "0.3"
futures-util = {version = "0.3", features = ["sink"]}
pin-project = "1.0"
tokio = {version = "1.5", features = ["fs", "net"]}
tokio-util = {version = "0.6", features = ["io", "codec"]}
url = "2.2"

[dev-dependencies]
adlib = {path = ".", version = "*"}
tokio = {version = "1.5", features = ["macros", "rt"]}
url = "2.2"

[[example]]
name = "read_source"
path = "examples/read_source.rs"
